<?xml version="1.0" encoding="UTF-8"?>
<candy.castle.BaloonLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transparent_panel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" 
    android:gravity="center" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="200dp"
        android:layout_height="200dp" >

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/txt1"
            android:textColor="#000000"
            android:textSize="11pt" />

        <EditText
            android:id="@+id/edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt2"
            android:layout_toRightOf="@+id/txt3"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/close"
            android:src="@drawable/close"
            android:onClick="buttonClose"
            android:contentDescription="@string/close" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txt1"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/txt2"
            android:textColor="#000000"
            android:textSize="5.5pt" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edittext"
            android:layout_alignBottom="@+id/edittext"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/txt3"
            android:textColor="#000000"
            android:textSize="5pt" />

        <Button
            android:id="@+id/buttonOk"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edittext"
            android:gravity="center"
            android:onClick="buttonOk"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:text="@string/ok"
            android:textColor="#000000" />

    </RelativeLayout>
</candy.castle.BaloonLayout>